--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         shuaihe2018@u.northwestern.edu
       </p>
       <p class="center-paragraph">
-        Northwestern University, EECS 352
+        Northwestern University, EECS 352, Prof. Bryan Pardo
       </p>
     </div>
   </section>
@@ -88,12 +88,13 @@
      <p class="center-paragraph">
        First, we will more specifically describe the data set we used to test and train our model. As described above, we pulled players’ single season data from <u>www.basketball-reference.com</u>. We then paired the 3,823 instances we obtained with the corresponding NBA 2K rating. For each instance, we had 26 attributes. Those attributes are first name, last name, player’s age, the player’s team, and then various season totals, such as total points scored and total number of two point shots taken. A full list of attributes can be seen in the first table below.
      </p>
+     <img src="img/2k17-1.jpg" class="img-title">
    </div>
  </section>
 
   <footer class="text-center background-dark-blue">
   <p>
-    EECS 349 Spring 2016 - Christopher Kober, Shuai He
+    EECS 352 Winter 2017 - Max Schuman, Shuai He
   </p>
 </footer>
 <script src="js/datatable.js"></script>
