column pictures -pardo

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <p class="center-paragraph">
         For inspection and display purposes, we trained smaller models on subsets of the 11 event classes in the DCASE data set, such as a “Clear Throat,” “Cough,” and “Door Slam” subset, and then decomposed synthesized sound samples containing one example of each event class in order.
       </p>
-      <div style="display: flex; flex-direction: row; justify-content: space-around">
+      <div style="display: flex; flex-direction: column; justify-content: space-around">
         <img src="graphics/small_test_stft.png" class="img-title" />
         <img src="graphics/small_test_events_None.png" class="img-title" />
       </div>
@@ -145,7 +145,7 @@
       <h5>
         Decomposition Results on Trained “Clear Throat” + “Cough” + “Door Slam”
       </h5>
-      <div style="display: flex; flex-direction: row; justify-content: space-around">
+      <div style="display: flex; flex-direction: column; justify-content: space-around">
         <img src="graphics/small_test_stft_not_trained.png" class="img-title" />
         <img src="graphics/small_test_events_not_trained_None.png" class="img-title" />
       </div>
@@ -160,7 +160,7 @@
       <h2 class="center-paragraph" id="examples">
        More Examples
       </h2>
-      <div style="display: flex; flex-direction: row; justify-content: space-around">
+      <div style="display: flex; flex-direction: column; justify-content: space-around">
         <img src="graphics/small_test2_stft.png" class="img-title" />
         <img src="graphics/small_test2_events_trained_None.png" class="img-title" />
       </div>
@@ -169,7 +169,7 @@
       <h5>
         Decomposition Results on Trained “Keyboard” + “Page Turn” + “Speech”
       </h5>
-      <div style="display: flex; flex-direction: row; justify-content: space-around">
+      <div style="display: flex; flex-direction: column; justify-content: space-around">
         <img src="graphics/small_test2_stft_not_trained.png" class="img-title" />
         <img src="graphics/small_test2_events_not_trained_None.png" class="img-title" />
       </div>
@@ -178,7 +178,7 @@
       <h5>
         Decomposition Results on Untrained “Keyboard” + “Page Turn” + “Speech”
       </h5>
-      <div style="display: flex; flex-direction: row; justify-content: space-around">
+      <div style="display: flex; flex-direction: column; justify-content: space-around">
         <img src="graphics/small_test3_stft.png" class="img-title" />
         <img src="graphics/small_test3_events_trained_None.png" class="img-title" />
       </div>
@@ -187,7 +187,7 @@
       <h5>
         Decomposition Results on Trained “Cough” + “Key Drop” + “Phone”
       </h5>
-      <div style="display: flex; flex-direction: row; justify-content: space-around">
+      <div style="display: flex; flex-direction: column; justify-content: space-around">
         <img src="graphics/small_test3_stft_not_trained.png" class="img-title" />
         <img src="graphics/small_test3_events_not_trained_None.png" class="img-title" />
       </div>
